--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+project/Win32/Debug/Connection.ini
+project/Win32/Debug/Connection.ini
