--- a/project/Win32/Debug/Connection.ini
+++ b/project/Win32/Debug/Connection.ini
@@ -1,10 +1,10 @@
 [Connection]
 CharacterSet=utf8
 DriverID=MSSQL
-Server=DESKTOP-5SNO83B
+Server=WIN-26BJ6Q2GFSI\BOOSTER
 Database=AccountDB
-User_name=
-Password=
+User_name=sa
+Password=CE192a12!@
 MARS=Yes
 OSAuthent=No
 ApplicationName=Account
