--- a/.gitignore
+++ b/.gitignore
@@ -67,5 +67,4 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
-project/Win32/Debug/Connection.ini
-project/Win32/Debug/Connection.ini
+*.ini
