--- a/project/Account_D12.dproj
+++ b/project/Account_D12.dproj
@@ -226,6 +226,14 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\source\lib\uGetKontragentData.pas"/>
+        <DCCReference Include="..\source\application\uAccountT.pas">
+            <Form>AccountT</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\source\application\uAccountF.pas">
+            <Form>AccountF</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
