--- a/project/Account_D12.dproj
+++ b/project/Account_D12.dproj
@@ -242,6 +242,14 @@
             <Form>TransactionF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\source\application\uDocumentRequestT.pas">
+            <Form>DocumentRequestT</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\source\application\uDocumentRequestF.pas">
+            <Form>DocumentRequestF</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
