--- a/project/Win32/Debug/Drivers.ini
+++ b/project/Win32/Debug/Drivers.ini
@@ -3,4 +3,5 @@ BaseDriverID=MSSQL
 ODBCDriver=ODBC Driver 17 for SQL Server
 ;SQL Server Native Client 11.0
 ;SQL Server
+;ODBC Driver 17 for SQL Server
 ODBCAdvanced=
