--- a/source/components/LookupEdit/LookupEdit.dproj
+++ b/source/components/LookupEdit/LookupEdit.dproj
@@ -6,9 +6,9 @@
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+        <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <ProjectName Condition="'$(ProjectName)'==''">LookupEdit</ProjectName>
-        <TargetedPlatforms>1</TargetedPlatforms>
+        <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Package</AppType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
@@ -69,6 +69,11 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
         <DCC_UsePackage>vcl;rtl;dbrtl;vclwinx;vclactnband;FireDAC;FireDACCommonDriver;FireDACCommon;dxCoreRS29;cxLibraryRS29;dxGDIPlusRS29;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;$(DCC_Namespace)</DCC_Namespace>
+        <BT_BuildType>Debug</BT_BuildType>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64x)'!=''">
         <DCC_UsePackage>vcl;rtl;dbrtl;vclwinx;vclactnband;FireDAC;FireDACCommonDriver;FireDACCommon;$(DCC_UsePackage)</DCC_UsePackage>
@@ -107,12 +112,10 @@
         <DCCReference Include="dxCoreRS29.dcp"/>
         <DCCReference Include="cxLibraryRS29.dcp"/>
         <DCCReference Include="dxGDIPlusRS29.dcp"/>
-        <DCCReference Include="designide.dcp"/>
         <DCCReference Include="uLookupEdit.pas"/>
         <DCCReference Include="..\..\lib\uCommonType.pas"/>
         <DCCReference Include="..\..\application\uBaseFormT.pas">
             <Form>BaseFormT</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="uRegister.pas"/>
         <BuildConfiguration Include="Base">
@@ -997,7 +1000,7 @@
             </Deployment>
             <Platforms>
                 <Platform value="Win32">True</Platform>
-                <Platform value="Win64">False</Platform>
+                <Platform value="Win64">True</Platform>
                 <Platform value="Win64x">False</Platform>
             </Platforms>
         </BorlandProject>
